--- a/gametest.html
+++ b/gametest.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <script
+  <!--   <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
+  crossorigin="anonymous"></script> -->
 
   <script src="phaser.js"></script>
 
