--- a/gametest.html
+++ b/gametest.html
@@ -5,14 +5,15 @@
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
   crossorigin="anonymous"></script> -->
 
-  <script src="phaser.js"></script>
+  <script src="vendor/phaser.js"></script>
+  <script src="vendor/timbre.js" defer></script>
 
   <script src="helpers.js" defer></script>
   <script src="creature.js" defer></script>
   <script src="game2.js" defer></script>
 
   <style>
-  /*body { background-color: black; }*/
+  body { background-color: black; }
   </style>
   </head>
   <body>
